<resources>
    <string name="app_name">SOSVN</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="button.finish">FINISH</string>
    <string name="button.next">NEXT</string>
    <string name="button.skip">SKIP</string>
    <string name="text1">The museum is housed in the Louvre Palace, originally built as a fortress in the late 12th century…</string>
    <string name="text2">Gwanghwamun is the main and largest gate of Gyeongbokgung Palace, in Jongno-gu, Seoul, South Korea.</string>
    <string name="text3">Tower Bridge is a combined bascule and suspension bridge in London built in 1886–1894.</string>
    <string name="text4">The Temple of Heaven is an imperial complex of religious buildings situated in the southeastern part…</string>
    <string name="text5">The Aegean Islands are within the sea and some bound it on its southern periphery…</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="pick_your_contry">Select your country</string>
    <string name="send_sms_notice">We will send you a text message.</string>
    <string name="next">Next</string>
    <string name="verification_code">Verification Code</string>
    <string name="verification_message">Please enter the verification code \n sent to (+84) 1629828750</string>
    <string name="finish">Save</string>
    <string name="country">Country</string>
    <string name="viet_nam">VIET NAM</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="birthday">Date of birth</string>
    <string name="gender">Gender</string>
    <string name="insurance_policy_number">Insurance policy no.</string>
    <string name="ice">ICE phone number</string>
    <string name="blood_type">Blood type</string>
    <string name="blood_type_hint">Select your blood type</string>
    <string name="email">Email</string>
    <string name="resend">Resend</string>
    <string name="check">Check</string>
    <string name="severity">Severity?</string>
    <string name="high">High</string>
    <string name="normal">Normal</string>
    <string name="slight">Slight</string>
    <string name="medium">Medium</string>
    <string name="what_happened">What happened?</string>
    <string name="burn">Burn</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="bleed">Bleed</string>
    <string name="fracture">Fracture</string>
    <string name="cancel">Cancel</string>
    <string name="find_title">Find</string>
    <string name="call_title">Call</string>
    <string name="report_title">Report</string>
    <string name="find_mess">We will suggest the nearest quality hospital in the area.</string>
    <string name="call_mess">Directly contacts with the english-speaking emergency line.</string>
    <string name="report_mess">Generate a bilingual report to pass the language barrier on the street.</string>

    <string-array name="gender_array">       
        <item>Male</item>
               
        <item>Female</item>
           
    </string-array>

    <string-array name="blood_array">       
        <item>A-</item>
               
        <item>A+</item>
        <item>B-</item>
               
        <item>B+</item>
        <item>AB-</item>
        <item>AB+</item>
               
        <item>O-</item>
         
        <item>O+</item>
         
    </string-array>
</resources>
