<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_timeline"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:background="@drawable/gradient_registration_background"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <ImageView
                android:id="@+id/iv_update_timeline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:alpha="0.8"
                android:src="@drawable/ic_camera"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/iv_user_avatar"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_marginTop="64dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/privateuser"
                app:civ_border_width="2dp"
                app:civ_border_color="#b6b6b6"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_margin="8dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_user_avatar"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/first_name"
                        android:textSize="20sp" />

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/ipt_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:hint="Phong"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/last_name"
                        android:textSize="20sp" />

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/ipt_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:hint="Nguyen"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/birthday"
                            android:textSize="20sp" />

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/ipt_birthday"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="8dp"
                            android:layout_marginStart="8dp"
                            android:hint="mm/dd/yyyy"
                            android:inputType="date"
                            android:maxLines="1"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/gender"
                            android:textSize="20sp" />

                        <Spinner
                            android:id="@+id/sp_gender"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="8dp"
                            android:maxLines="1"
                            android:textSize="20sp" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/ice"
                        android:textSize="20sp" />

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/ipt_ice"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:hint="123456789"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/insurance_policy_number"
                        android:textSize="20sp" />

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/ipt_insurance_policy_number"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:hint="123456789"
                        android:inputType="number"
                        android:maxLines="1"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/blood_type"
                        android:textSize="20sp" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/ipt_blood_type"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="8dp"
                            android:layout_marginStart="8dp"
                            android:enabled="false"
                            android:hint="@string/blood_type_hint" />

                        <ImageView
                            android:id="@+id/iv_drop_down"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end|center"
                            android:layout_marginRight="12dp"
                            android:src="@drawable/ic_arrow_drop_down" />
                    </FrameLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/email"
                        android:textSize="20sp" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/ipt_email"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="8dp"
                            android:layout_marginStart="8dp"
                            android:hint="someone@gmail.com"
                            android:inputType="textEmailAddress" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end|center"
                            android:layout_marginRight="12dp"
                            android:src="@drawable/ic_email" />
                    </FrameLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/country"
                        android:textSize="20sp" />

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/ipt_county"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:hint="@string/viet_nam"
                        android:maxLines="1"
                        android:textSize="20sp" />
                </LinearLayout>

                <FrameLayout
                    android:id="@+id/fl_finish"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginEnd="64dp"
                    android:layout_marginStart="64dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/border_around" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="4dp"
                        android:text="@string/finish"
                        android:textAlignment="center"
                        android:textColor="#ff0844"
                        android:textSize="40sp" />
                </FrameLayout>

            </LinearLayout>
        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>