<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:text="@string/severity"
            android:textColor="#4d4d4d"
            android:textSize="@dimen/title_report_size"
            android:textStyle="italic" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <com.coderschool.sosvn.util.ViewCustom
                corner_radius="50.0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp">

                <View
                    android:id="@+id/v_high_severity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.6"
                    android:background="@color/idle" />
            </com.coderschool.sosvn.util.ViewCustom>

            <TextView
                android:id="@+id/tv_high_severity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/high"
                android:textColor="#6e6b6b"
                android:textSize="@dimen/text_report_size" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <com.coderschool.sosvn.util.ViewCustom
                corner_radius="50.0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp">

                <View
                    android:id="@+id/v_medium_severity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.6"
                    android:background="@color/idle" />
            </com.coderschool.sosvn.util.ViewCustom>

            <TextView
                android:id="@+id/tv_medium_severity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/medium"
                android:textColor="#6e6b6b"
                android:textSize="@dimen/text_report_size" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <com.coderschool.sosvn.util.ViewCustom
                corner_radius="50.0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp">

                <View
                    android:id="@+id/v_slight_severity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.6"
                    android:background="@color/idle" />
            </com.coderschool.sosvn.util.ViewCustom>

            <TextView
                android:id="@+id/tv_slight_severity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/slight"
                android:textColor="#6e6b6b"
                android:textSize="@dimen/text_report_size" />
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2" />
    </LinearLayout>

</LinearLayout>